Agent Details Component opens when clicked

--- a/src/app/features/agent/agent-details/agent-details.component.html
+++ b/src/app/features/agent/agent-details/agent-details.component.html
@@ -41,9 +41,9 @@
                     <div class="col-md-4">
                         <div class="profile-work">
                             <p>Links</p>
-                            <a href="">Address </a><br/>
-                            <a href="">Policy</a><br/>
-                            <a href="">Agent</a><br/>
+                            <a href="">Customers</a><br/>
+                            <a href="">Policies</a><br/>
+                            <a href="">Placeholder</a><br/>
                             <a href="">Notes</a><br/>
 
 
@@ -59,7 +59,7 @@
                                                 <label>Full Name</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p></p>
+                                                <p>{{selectedAgent?.first_name}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
