--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,30 +1,25 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); */
 
-
 body {
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #ffffff;
-
 }
 
 nav {
   background-color: white;
   position: fixed;
-  top:5px;
-left:50%;
+  top: 5px;
+  left: 50%;
   transform: translateX(-50%);
   display: inline-block;
-  border: 2px solid #EBECF1;
+  border: 2px solid #ebecf1;
 
   animation: slide-in 1s ease-out;
   width: 100%;
   z-index: 1000;
-
-
 }
 
 ul {
-
   justify-content: space-between;
   position: relative;
   display: flex;
@@ -56,9 +51,9 @@ ul {
       margin: 12px -12px;
       padding: 0;
       background: #7d6bb3;
-      border: 1px solid #F7C833;
-      border-right: 2px solid #F89329;
-      border-bottom: 2px solid #F89329;
+      border: 1px solid #f7c833;
+      border-right: 2px solid #f89329;
+      border-bottom: 2px solid #f89329;
       border-radius: 5px;
       transition: opacity 0.2s, visibility 0.2s;
       li {
@@ -77,15 +72,16 @@ ul {
       border-bottom: 2px solid #692be4;
 
       a {
-        color: #F9F8FD;
+        color: #f9f8fd;
       }
       ul {
+        overflow-y:auto;
         visibility: visible;
         opacity: 1;
-        box-shadow: 0px 3px 5px 2px #EBECF1;
+        box-shadow: 0px 3px 5px 2px #ebecf1;
         li {
           a {
-            color: #F9F8FD;
+            color: #f9f8fd;
           }
         }
       }
@@ -107,12 +103,14 @@ ul {
     top: 15px;
   }
 }
-.auth{
-display: flex;
-justify-content: right;
-
-  }
+.auth {
+  display: flex;
+  justify-content: right;
+}
 
 .customer {
-position:sticky;
+  position: sticky;
+}
+.agentslist {
+  overflow-y: scroll;
 }
