displaying agent details

--- a/src/app/features/agent/agent-details/agent-details.component.html
+++ b/src/app/features/agent/agent-details/agent-details.component.html
@@ -56,18 +56,18 @@
 
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Full Name</label>
+                                                <label>Full Name:</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>{{selectedAgent?.first_name}}</p>
+                                                <p>{{selectedAgent?.first_name}} {{selectedAgent?.last_name}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
                                           <div class="col-md-6">
-                                              <label>Email</label>
+                                              <label>Email:</label>
                                           </div>
                                           <div class="col-md-6">
-                                              <p></p>
+                                              <p>{{selectedAgent?.first_name}}</p>
                                           </div>
                                       </div>
                                         <div class="row">
@@ -75,7 +75,7 @@
                                                 <label>Phone</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p></p>
+                                                <p>{{selectedAgent?.id}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -83,7 +83,7 @@
                                                 <label>DOB</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p></p>
+                                                <p>{{selectedAgent?.first_name}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -91,15 +91,10 @@
                                                 <label>Agent</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p></p>
+                                                <p>{{selectedAgent?.first_name}}</p>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Insurance Co.</label>
-                                            </div>
 
-                                        </div>
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label>State</label>
