--- a/src/app/features/agent/agent-details/agent-details.component.html
+++ b/src/app/features/agent/agent-details/agent-details.component.html
@@ -78,31 +78,31 @@
                                                 <p>{{selectedAgent?.id}}</p>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <!-- <div class="row">
                                             <div class="col-md-6">
-                                                <label>DOB</label>
+                                                <label></label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedAgent?.first_name}}</p>
-                                            </div>
-                                        </div>
+                                            </div> -->
+                                        <!-- </div> -->
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Agent</label>
+                                                <label>State:</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>{{selectedAgent?.first_name}}</p>
+                                                <p>{{selectedAgent?.state}}</p>
                                             </div>
                                         </div>
 
-                                        <div class="row">
+                                        <!-- <div class="row">
                                             <div class="col-md-6">
                                                 <label>State</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p></p>
-                                            </div>
-                                        </div>
+                                            </div> -->
+                                        <!-- </div> -->
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label>Customer ID #</label>
