--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -25,7 +25,7 @@
 
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Customer Profile</a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Timeline</a>
@@ -41,9 +41,10 @@
                     <div class="col-md-4">
                         <div class="profile-work">
                             <p>Links</p>
-                            <a href="chage to /address">Address</a><br/>
+                            <a href="change to/agent">Assign Agent</a><br/>
+                           
                             <a href="change to/policy">Policy</a><br/>
-                            <a href="change to/agent">Agent</a><br/>
+
                             <a href="chagne to open notepad">Notes</a><br/>
 
 
@@ -93,6 +94,14 @@
                                           </div>
                                           <div class="col-md-6">
                                               <p>{{selectedCustomer?.policy?.expDate}}</p>
+                                          </div>
+                                        </div>
+                                        <div class="row">
+                                          <div class="col-md-6">
+                                              <label>Address:</label>
+                                          </div>
+                                          <div class="col-md-6">
+                                              <p><a href="chage to /address">View Address</a><br/></p>
                                           </div>
                                         </div>
                                         <div class="row">
