--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -58,7 +58,7 @@
                     <span>{{ customer.email }}</span>
                   </td>
                   <td>
-                    <span>{{ customer.agentId }}</span>
+                    <span>{{ customer.agent_id }}</span>
                   </td>
                   <td><span>Get Policy Link</span></td>
                   <td class="text-end">
