remove all links to css within templates

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -85,7 +85,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Agent Signup-Theby App</title>
-    <link rel="stylesheet" href="sign-up.component.css" />
+    <!-- <link rel="stylesheet" href="sign-up.component.css" /> -->
     <!-- Fontawesome CDN Link -->
     <link
       rel="stylesheet"
