--- a/src/app/features/customer/customer.component.html
+++ b/src/app/features/customer/customer.component.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Add Customer Form</title>
-    <link rel="stylesheet" href="customer.component.css" />
+    <!-- <link rel="stylesheet" href="customer.component.css" /> -->
     <!-- Fontawesome CDN Link -->
     <link
       rel="stylesheet"
