--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Agent Login-Theby App </title>
-    <link rel="stylesheet" href="login.component.css">
+    <!-- <link rel="stylesheet" href="login.component.css"> -->
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- tried removing this to index.html but broke keeping in just for now -->
