removed HTML tags from templates
work on table so it doesnt overflow cells or overflow its container

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,66 +1,61 @@
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title> Agent Login-Theby App </title>
-    <!-- <link rel="stylesheet" href="login.component.css"> -->
-    <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- tried removing this to index.html but broke keeping in just for now -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
 <body>
-<div class="body">
-  <div class="container">
-    <input type="checkbox" id="flip" />
-    <div class="cover">
-      <div class="front">
-        <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
-        <div class="text">
-          <span class="text-1">Helping Agents<br />Help Customers</span>
-          <span class="text-2">Login</span>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <div class="body">
+    <div class="container">
+      <input type="checkbox" id="flip" />
+      <div class="cover">
+        <div class="front">
+          <img
+            src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg"
+            alt=""
+          />
+          <div class="text">
+            <span class="text-1">Helping Agents<br />Help Customers</span>
+            <span class="text-2">Login</span>
+          </div>
         </div>
       </div>
-      <!-- <div class="back">
-        <img class="backImg" src="images/backImg.jpg" alt=""/>
-        <div class="text">
-          <span class="text-1"
-            >Complete miles of journey<br />with one step</span
-          >
-          <span class="text-2">Let's get started</span>
-        </div>
-      </div> -->
-    </div>
-    <div class="forms">
-      <div class="form-content">
-        <div class="login-form">
-          <div class="title">Login</div>
-          <form [formGroup]="loginForm" (ngSubmit)="login()">
-            <div class="user-info">
-            <div class="input-boxes">
-              <div class="input-box">
-                <i class="fas fa-envelope"></i>
-                <input type="text" formControlName="email" placeholder="Enter your email"/>
-              </div>
-              <div class="input-box">
-                <i class="fas fa-lock"></i>
-                <input
-                  type="password"
-                  placeholder="Enter your password"
-                 formControlName="password"
-                />
-              </div>
-              <div class="text"><a href="#">Forgot password?</a></div>
-              <div class="button input-box">
-                <input type="submit" value="Submit" />
+      <div class="forms">
+        <div class="form-content">
+          <div class="login-form">
+            <div class="title">Login</div>
+            <form [formGroup]="loginForm" (ngSubmit)="login()">
+              <div class="user-info">
+                <div class="input-boxes">
+                  <div class="input-box">
+                    <i class="fas fa-envelope"></i>
+                    <input
+                      type="text"
+                      formControlName="email"
+                      placeholder="Enter your email"
+                    />
+                  </div>
+                  <div class="input-box">
+                    <i class="fas fa-lock"></i>
+                    <input
+                      type="password"
+                      placeholder="Enter your password"
+                      formControlName="password"
+                    />
+                  </div>
+                  <div class="text"><a href="#">Forgot password?</a></div>
+                  <div class="button input-box">
+                    <input type="submit" value="Submit" />
+                  </div>
+                </div>
+                <div class="text sign-up-text">
+                  Don't have an account?
+                  <label
+                    for="flip"
+                    [routerLink]="['/sign-up']"
+                    routerLinkActive="router-link-active"
+                    >Signup now</label
+                  >
                 </div>
               </div>
-              <div class="text sign-up-text"  >
-                Don't have an account? <label for="flip"  [routerLink]="['/sign-up']" routerLinkActive="router-link-active"  >Signup now</label>
-              </div>
-            </div>
-          </form>
-        </div>
-        <!-- <div class="signup-form">
+            </form>
+          </div>
+          <!-- <div class="signup-form">
           <div class="title">Agent Signup</div>
 
           <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
@@ -138,13 +133,12 @@
               <div class="text sign-up-text">
                 Already have an account? <label for="flip">Login now</label>
               </div> -->
-            <!-- </div>
+          <!-- </div>
           </form>
         </div>
       </div> -->
-
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
 </body>
