--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -1,6 +1,7 @@
 
   <!-- This is an add customer form that i should have named differently in hindsight as far as the component name goes  -->
   <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div class="body">
       <div class="container">
         <input type="checkbox" id="flip" />
