--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -1,108 +1,13 @@
-<!--
-<div class="signup-form">
-  <div class="title">Agent Signup</div>
-
-  <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
-    <div class="input-boxes">
-      <div class="agent-info" formGroupName="agent">
-        <div class="input-box">
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            placeholder="Enter your first name"
-            formControlName="first_name"
-          />
-        </div>
-        <div class="input-box">
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            placeholder="Enter your last name"
-            formControlName="last_name"
-          />
-        </div>
-        <div class="input-box">
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            placeholder="Enter your national producer #"
-            formControlName="npn"
-          />
-        </div>
-        <div class="input-box">
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            placeholder="Enter your state"
-            formControlName="state"
-          />
-        </div>
-      </div>
-      <div class="agent-info" formGroupName="user">
-        <div class="input-box">
-          <i class="fas fa-envelope"></i>
-          <input
-            type="text"
-            placeholder="Enter your email"
-            formControlName="email"
-          />
-        </div>
-        <div class="user-info">
-          <div class="input-box">
-            <i class="fas fa-lock"></i>
-            <input
-              type="password"
-              placeholder="Enter your password"
-              formControlName="password"
-            />
-          </div>
-          <div class="input-box">
-            <i class="fas fa-lock"></i>
-            <input
-              type="password"
-              placeholder="Re-enter your password"
-              formControlName="password_confirmation"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="button input-box">
-        <input
-          type="submit"
-
-          value="Submit"
-        />
-      </div>
-
-      <div class="text sign-up-text">
-        Already have an account? <label for="flip">Login now</label>
-      </div>
-    </div>
-  </form>
-</div> -->
-
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Agent Signup-Theby App</title>
-    <!-- <link rel="stylesheet" href="sign-up.component.css" /> -->
-    <!-- Fontawesome CDN Link -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <!-- tried removing this to index.html but broke keeping in just for now -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
+<body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div class="body">
       <div class="container">
         <input type="checkbox" id="flip" />
         <div class="cover">
           <div class="front">
             <img
-              src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg"
-              alt=""
+              src="\assets\photos\Signup.jpg"
+              alt="Signup Art"
             />
             <div class="text">
               <span class="text-1">Helping Agents<br />Help Customers</span>
@@ -239,4 +144,4 @@
   </form>
 </div> -->
   </body>
-</html>
+
