--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -2,6 +2,9 @@
   href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   rel="stylesheet"
 />
+<body>
+
+
 <div class="body">
   <div class="container">
     <div class="row">
@@ -76,3 +79,4 @@
     </div>
   </div>
 </div>
+</body>
