--- a/src/app/agent/agent-details/agent-details.component.css
+++ b/src/app/agent/agent-details/agent-details.component.css
@@ -4,19 +4,19 @@ body{
 .emp-profile{
   padding: 2%;
 
-  margin-top: 5%;
+  margin-top: 6%;
   margin-bottom: 3%;
   border-radius: 0.5rem;
   background: #fff;
 }
-.policy-img{
+.agent-img{
   text-align: center;
 }
-.policy-img img{
+.agent-img img{
   width: 70%;
   height: 100%;
 }
-.policy-img .file {
+.agent-img .file {
   position: relative;
   overflow: hidden;
   margin-top: 0%;
@@ -26,7 +26,7 @@ body{
   font-size: 15px;
   background: #212529b8;
 }
-.policy-img .file input {
+.agent-img .file input {
   position: absolute;
   opacity: 0;
   right:-150px;
@@ -41,7 +41,7 @@ body{
 }
 .profile-edit-btn{
   border: none;
-  border-radius: 10px;
+  border-radius: 1.5rem;
   width: 70%;
   padding: 2%;
   font-weight: 600;
